--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
+    "react-script": "^2.0.5",
     "react-scripts": "4.0.3",
     "router": "^1.3.5",
     "web-vitals": "^1.1.2"
